# Boston-Housing-Predictor

./: .gitignore  README.md  boston-housing-predictor.html  boston-housing-predictor.ipynb  pyproject.toml
ref/: boston-housing-predictor copy-v1.ipynb  boston-housing-predictor v1.1.ipynb  boston-housing-predictor v1.2.ipynb  boston-housing-predictor v1.3.ipynb  boston-housing-predictor v1.4.ipynb  boston-housing-predictor v1.5.ipynb
